--- a/laporanpemakaian_28.rdlc
+++ b/laporanpemakaian_28.rdlc
@@ -432,7 +432,7 @@
               </TablixColumns>
               <TablixRows>
                 <TablixRow>
-                  <Height>0.81167cm</Height>
+                  <Height>0.65292cm</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -458,6 +458,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -493,6 +494,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -501,7 +503,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -529,6 +530,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -537,7 +539,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -565,6 +566,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -600,6 +602,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -635,6 +638,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -670,6 +674,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -705,6 +710,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -740,6 +746,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -775,6 +782,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -810,6 +818,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -845,6 +854,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -880,6 +890,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -915,6 +926,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -950,6 +962,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -985,6 +998,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1020,6 +1034,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1055,6 +1070,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1090,6 +1106,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1125,6 +1142,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1160,6 +1178,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1195,6 +1214,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1230,6 +1250,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1265,6 +1286,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1300,6 +1322,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1335,6 +1358,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1370,6 +1394,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1405,6 +1430,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1440,6 +1466,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1475,6 +1502,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1510,6 +1538,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1545,6 +1574,7 @@
                           <Style>
                             <Border>
                               <Style>Solid</Style>
+                              <Width>0.25pt</Width>
                             </Border>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
@@ -1605,7 +1635,7 @@
             <DataSetName>datasetlaporanpemakaian</DataSetName>
             <Top>5.53137cm</Top>
             <Left>0.41041cm</Left>
-            <Height>0.81167cm</Height>
+            <Height>0.65292cm</Height>
             <Width>26.90387cm</Width>
             <Style>
               <Border>
@@ -2900,7 +2930,7 @@
                 <rd:DefaultName>Textbox44</rd:DefaultName>
                 <Left>0.72729cm</Left>
                 <Height>1.51957cm</Height>
-                <Width>3.39958cm</Width>
+                <Width>3.38774cm</Width>
                 <ZIndex>1</ZIndex>
                 <Style>
                   <Border>
@@ -2933,9 +2963,9 @@
                   </Paragraph>
                 </Paragraphs>
                 <rd:DefaultName>Textbox44</rd:DefaultName>
-                <Left>4.12687cm</Left>
+                <Left>4.11503cm</Left>
                 <Height>0.61809cm</Height>
-                <Width>4.06104cm</Width>
+                <Width>4.07288cm</Width>
                 <ZIndex>2</ZIndex>
                 <Style>
                   <Border>
@@ -4047,9 +4077,9 @@
                 </Paragraphs>
                 <rd:DefaultName>Textbox44</rd:DefaultName>
                 <Top>0.61809cm</Top>
-                <Left>4.12687cm</Left>
+                <Left>4.11503cm</Left>
                 <Height>0.90148cm</Height>
-                <Width>4.06105cm</Width>
+                <Width>4.07289cm</Width>
                 <ZIndex>33</ZIndex>
                 <Style>
                   <Border>
